--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
 body,html{
     height: 100%;
     width: 100%;
-    background-color: rgb(231, 187, 231);
+    /* background-color: rgb(231, 187, 231); */
+    background-color: green;
 }
 
 #header{
