--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
 body,html{
     height: 100%;
     width: 100%;
-    /* background-color: rgb(231, 187, 231); */
-    background-color: green;
+    background-color: rgb(231, 187, 231);
+    
 }
 
 #header{
@@ -52,7 +52,7 @@ body,html{
 }
 .individualMovieDiv{
     height: auto;
-    width: 350px;
+    width: 300px;
     padding: 5px;
     display: flex;
     flex-direction: column;
